pihole/templates/pihole.service-tcp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-service-tcp
spec:
  selector:
    app: pihole
  ports:
    - port: 9080
      targetPort: http
      protocol: TCP
      name: http
    - port: 9443
      targetPort: https
      protocol: TCP
      name: https
    - port: 53
      targetPort: dns
      protocol: TCP
      name: dns
  type: LoadBalancer
