pihole/templates/pihole.service-udp.yml
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-service-udp
spec:
  selector:
    app: pihole
  ports:
    - port: 53
      targetPort: dns-udp
      protocol: UDP
      name: dns-udp
    - port: 67
      targetPort: client-udp
      protocol: UDP
      name: client-udp
  type: LoadBalancer
